# cpp_template

./: .gitignore  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: Blah.cpp.8A91F0C3934360C4.idx  NotBlah.h.B5E7B55C76673521.idx  main.cpp.D0097CCE5EB5F218.idx
include/: Blah10.h  Log.h
lib/: Blah.cpp  CMakeLists.txt
lib/include/: NotBlah.h
src/: main.cpp
